deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mlops
  labels:
    name: mlops
    project: loan-approval
